pengelompokan menu, tambahan lokasi

--- a/modal-setting.html
+++ b/modal-setting.html
@@ -16,13 +16,18 @@
     <section class="modal__container" id="modalSetting">
         <div class="modal__body">
             <div class="modal__body-header">
-                <div class="modal-close-btn" id="">
-                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M11 0.5C5.15 0.5 0.5 5.15 0.5 11C0.5 16.85 5.15 21.5 11 21.5C16.85 21.5 21.5 16.85 21.5 11C21.5 5.15 16.85 0.5 11 0.5ZM15.05 16.25L11 12.2L6.95 16.25L5.75 15.05L9.8 11L5.75 6.95L6.95 5.75L11 9.8L15.05 5.75L16.25 6.95L12.2 11L16.25 15.05L15.05 16.25Z"
-                            fill="hsla(216, 22%, 65%, 1)" />
-                    </svg>
-                </div>
+                <h5>Setting Lokasi :</h4>
+                    <select name="lokasi">
+                        <option value="">Pusat</option>
+                        <option value="">Cabang</option>
+                    </select>
+                    <div class="modal-close-btn" id="">
+                        <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M11 0.5C5.15 0.5 0.5 5.15 0.5 11C0.5 16.85 5.15 21.5 11 21.5C16.85 21.5 21.5 16.85 21.5 11C21.5 5.15 16.85 0.5 11 0.5ZM15.05 16.25L11 12.2L6.95 16.25L5.75 15.05L9.8 11L5.75 6.95L6.95 5.75L11 9.8L15.05 5.75L16.25 6.95L12.2 11L16.25 15.05L15.05 16.25Z"
+                                fill="hsla(216, 22%, 65%, 1)" />
+                        </svg>
+                    </div>
             </div>
             <div class="modal__body-main modal__setting">
                 <aside class="modal__setting-left">
@@ -38,85 +43,33 @@
                     <ul class="setting__left-box">
                         <li class="setting__left-menu active">
                             <span class="material-symbols-outlined">
-                                receipt_long
-                            </span>
-                            <span class="menu-item">Aplikasi Kasir</span>
-                        </li>
-                        <li class="setting__left-menu">
-                            <span class="material-symbols-outlined">
                                 backup_table
                             </span>
                             <span class="menu-item">Setting Table</span>
                         </li>
                         <li class="setting__left-menu">
                             <span class="material-symbols-outlined">
-                                location_away
+                                receipt_long
                             </span>
-                            <span class="menu-item">Profil Usaha</span>
+                            <span class="menu-item">Penjualan</span>
                         </li>
                         <li class="setting__left-menu">
                             <span class="material-symbols-outlined">
-                                fluid_balance
+                                shopping_cart
                             </span>
-                            <span class="menu-item">Network & internet</span>
+                            <span class="menu-item">Pembelian</span>
                         </li>
                         <li class="setting__left-menu">
                             <span class="material-symbols-outlined">
-                                settings_suggest
+                                event_note
                             </span>
-                            <span class="menu-item">Personalization</span>
+                            <span class="menu-item">Akutansi</span>
                         </li>
                         <li class="setting__left-menu">
                             <span class="material-symbols-outlined">
-                                cell_tower
+                                extension
                             </span>
-                            <span class="menu-item">Time & language</span>
-                        </li>
-                        <li class="setting__left-menu">
-                            <span class="material-symbols-outlined">
-                                photo_camera
-                            </span>
-                            <span class="menu-item">Gaming</span>
-                        </li>
-                        <li class="setting__left-menu">
-                            <span class="material-symbols-outlined menu-icon">sync_saved_locally</span>
-                            <span class="menu-item">System</span>
-                        </li>
-                        <li class="setting__left-menu">
-                            <span class="material-symbols-outlined">
-                                routine
-                            </span>
-                            <span class="menu-item">Bluetooth & devices</span>
-                        </li>
-                        <li class="setting__left-menu">
-                            <span class="material-symbols-outlined">
-                                stethoscope_arrow
-                            </span>
-                            <span class="menu-item">Accounts</span>
-                        </li>
-                        <li class="setting__left-menu">
-                            <span class="material-symbols-outlined">
-                                fluid_balance
-                            </span>
-                            <span class="menu-item">Network & internet</span>
-                        </li>
-                        <li class="setting__left-menu">
-                            <span class="material-symbols-outlined">
-                                settings_suggest
-                            </span>
-                            <span class="menu-item">Personalization</span>
-                        </li>
-                        <li class="setting__left-menu">
-                            <span class="material-symbols-outlined">
-                                cell_tower
-                            </span>
-                            <span class="menu-item">Time & language</span>
-                        </li>
-                        <li class="setting__left-menu">
-                            <span class="material-symbols-outlined">
-                                photo_camera
-                            </span>
-                            <span class="menu-item">Gaming</span>
+                            <span class="menu-item">General</span>
                         </li>
                     </ul>
                 </aside>
